# paw

./: .gitignore  ACHIEVEMENTS.md  ARCHITECTURE_SUPPORT.md  CHANGELOG.md  CHEATSHEET.md  CLEANUP_SUMMARY.md  CMakeLists.txt  CODEGEN_REFACTOR_PLAN.md  CODEGEN_REFACTOR_STRATEGY.md  CROSS_COMPILE.md  Cargo.toml  DESIGN.md  DISTRIBUTION.md  DOCS_INDEX.md  Doxyfile  ERROR_REPORTER.md  FINAL_CHANGES.md  FINAL_CLEANUP.md  FINAL_SUMMARY.md  IMPLEMENTATION_STATUS.md  KEYWORDS_FINAL.md  LICENSE  LLVM_COMPLETE.md  LLVM_README.md  LOCAL_LLVM_GUIDE.md  Log.md  MODULE_GUIDE.md  MODULE_SYSTEM.md  Mem.md  NEXT_STEPS.md  Next Step.md  OPTIMIZATION_ROADMAP.md  PLATFORM_SUPPORT.md  PROJECT.md  PROJECT_COMPLETE.md  PROJECT_STATUS.md  PROJECT_UPDATE.md  QUICK_DIST.md  QUICK_START.md  READABILITY_ANALYSIS.md  (+61 more)
.github/workflows/: bsd-test.yml  ci.yml  release-cross-llvm.yml  release.yml
assets/: README.md
clang/: CMakeLists.txt
docs/: ARGUMENT_VALIDATION_NOTES.md  BACKEND_SUPPORT.md  BUILD_SYSTEM_GUIDE.md  CROSS_COMPILE_LLVM.md  CROSS_PLATFORM_LLVM_GUIDE.md  DOCS_AND_TESTS_CLEANUP.md  ENGINEERING_MODULE_SYSTEM.md  FFI_REQUIREMENTS.md  FILESYSTEM_API.md  GENERIC_TYPE_SYSTEM_PLAN.md  LAYERED_DESIGN.md  LLVM_BACKEND_COVERAGE.md  LLVM_BACKEND_FIXES_v0.2.0.md  LLVM_BACKEND_v0.2.0_SUMMARY.md  LLVM_BUILD_GUIDE.md  LLVM_ENUM_ANALYSIS.md  LLVM_ENUM_COMPLETE.md  LLVM_ENUM_IMPLEMENTATION_GUIDE.md  LLVM_INTEGRATION.md  LLVM_INTEGRATION_SUMMARY.md  LLVM_MIGRATION_PLAN.md  LLVM_NATIVE_API_STATUS.md  LLVM_PREBUILT_GUIDE.md  LLVM_PREBUILT_SUMMARY.md  LLVM_QUICK_SETUP.md  LLVM_SETUP.md  LLVM_SETUP_COMPARISON.md  LLVM_SETUP_CROSS_PLATFORM.md  LLVM_STATUS.md  LLVM_VENDOR_GUIDE.md  MEMORY_LEAK_FINAL_STATUS.md  MODULE_SYSTEM.md  NEXT_STEPS.md  PRELUDE_V0.2.0.md  PROJECT_CLEANUP_SUMMARY.md  QUICKSTART.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.1.2.md  (+19 more)
editors/vscode/: README.md  language-configuration.json  package.json  paw.tmLanguage.json
examples/: all_features_demo.paw  arithmetic.paw  array_complete.paw  array_infer.paw  array_init_complete.paw  array_param.paw  array_syntax_test.paw  array_test.paw  array_write_test.paw  break_continue_mix.paw  break_test.paw  case_simple.paw  cast_complete.paw  cast_full_test.paw  cast_simple_test.paw  char_basic.paw  char_cast.paw  char_complete.paw  char_string.paw  char_test.paw  complete_example.paw  continue_test.paw  enum_complete.paw  enum_error_handling.paw  enum_simple.paw  enum_test.paw  error_full_integration.paw  error_handling.paw  error_handling_complete.paw  error_handling_demo.paw  error_handling_pattern.paw  error_propagation.paw  error_reporter_demo.cpp  escape_test.paw  executable_test.paw  fibonacci.paw  float_test.paw  fs_demo.paw  full_method_test.paw  generic_add.paw  (+89 more)
examples/modules/: data.paw  main.paw  math.paw  simple_types.paw  test_simple.paw  types.paw  use_data.paw  use_simple_types.paw  use_types.paw
examples/std/: prelude.paw
include/pawc/: colors.h  common.h  error_reporter.h  toml_parser.h
lld/: CMakeLists.txt
mylib/: mod.paw
paw/: Paw.toml  error.paw  generic.paw  main.paw  traits.paw
paw/std/: fmt.paw  mem.paw  prelude.paw
pawrt/: Cargo.toml
pawrt/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: io.rs  lib.rs  mem.rs
scripts/: INSTALL_GUIDE.md  README.md  build_llvm.py  build_llvm.sh  build_llvm_cross_platform.sh  build_llvm_local.sh  compile_with_local_llvm.ps1  compile_with_local_llvm.sh  download_llvm.sh  download_llvm_cross_platform.sh  install_llvm_complete.py  pawc.bat  pawc.sh  qemu_test.sh  setup_llvm.py  setup_llvm_source.sh  test_cross_platform.sh
src/: README.md  ast.rs  ast.zig  c_backend.zig  codegen.rs  codegen.zig  colors.cpp  desugar.rs  diag.rs  diagnostic.zig  error_reporter.cpp  generics.zig  lexer.zig  link.rs  link_zig.rs  llvm_backend.zig  llvm_c_api.zig  llvm_downloader.cpp  llvm_downloader.h  llvm_native_backend.zig  main.cpp  main.rs  main.zig  mangle.rs  module.zig  parse.rs  parser.rs  parser.zig  passes.rs  project.rs  repl.zig  setup.cpp  tcc_backend.zig  token.zig  toml_parser.cpp  typecheck.rs  typechecker.zig
src/backend/: codegen.rs  link_zig.rs  mangle.rs  mod.rs
src/builtin/: fs.zig  memory.zig  mod.zig
src/builtins/: builtins.cpp  builtins.h
src/cli/: args.rs  colors.rs  mod.rs  output.rs  progress.rs
src/codegen/: codegen.cpp  codegen.h  codegen_expr.cpp  codegen_match.cpp  codegen_stmt.cpp  codegen_struct.cpp  codegen_type.cpp
src/frontend/: ast.rs  mod.rs  parser.rs  span.rs
src/grammar/: grammar.pest
src/interner/: intern.rs  mod.rs  symbol.rs  ty_intern.rs
src/lexer/: lexer.cpp  lexer.h
src/middle/: mod.rs  passes.rs  typecheck.rs
src/module/: module_compiler.cpp  module_compiler.h  module_loader.cpp  module_loader.h  symbol_table.cpp  symbol_table.h
src/parser/: ast.h  parser.cpp  parser.h
src/prelude/: prelude.paw
src/runtime/: runtime.c
src/std/: prelude.paw
src/utils/: fast.rs  mod.rs  parallel.rs  performance.rs
stdlib/: README.md
stdlib/collections/: README.md  box.paw  mod.paw  vec.paw
stdlib/fs/: README.md  mod.paw
stdlib/io/: print.paw
stdlib/json/: README.md  mod.paw
stdlib/std/: array.paw  collections.paw  conv.paw  fmt.paw  fs.paw  io.paw  math.paw  mem.paw  option.paw  os.paw  pair.paw  parse.paw  path.paw  result.paw  string.paw  time.paw  vec.paw
stdlib/string/: README.md  mod.paw
tests/: 02_let_mut.paw  04_loop_break.paw  07_is_expression.paw  08_loop_for.paw  13_is_comprehensive.paw  14_rust_style_types.paw  15_128bit_types.paw  BACKEND_COMPARISON.md  BACKEND_FIX_SUMMARY.md  README.md  backend_comparison.paw  llvm_simple_test.paw  loop_simple_test.paw  test_instance_methods.paw  test_llvm_native.zig  test_modules.paw  test_multi_import.paw  test_static_methods.paw  test_stdlib.paw
tests/benchmarks/: fibonacci_benchmark.paw  loop_benchmark.paw
tests/error_messages/: simple_error.paw
tests/generics/: test_generic_struct_complete.paw  test_multi_type_params.paw
tests/integration/: v0.1.8_test.paw
tests/llvm/: llvm_arithmetic.paw  llvm_complete_test.paw  llvm_hello.paw  (+7 more)
(+123 files in other folders)
