[package]
name = "PawLang"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1"
# 解析
pest = "2.8.2"
pest_derive = "2.8.2"

# Cranelift 后端
cranelift-codegen  = "0.123.2"
cranelift-module   = "0.123.2"
cranelift-object   = "0.123.2"
cranelift-frontend = "0.123.2"
cranelift-native = { version = "0.123.2", default-features = true }
target-lexicon     = "0.13.3"

[build-dependencies]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3