[package]
name = "PawLang"
version = "0.0.2"
edition = "2024"

[dependencies]
ariadne = "0.5.1"
anyhow = "1"
# 解析
pest = "2.8.2"
pest_derive = "2.8.2"

# Cranelift 后端
cranelift-codegen  = "0.123.2"
cranelift-module   = "0.123.2"
cranelift-object   = "0.123.2"
cranelift-frontend = "0.123.2"
cranelift-native = { version = "0.123.2", default-features = true }


hashbrown = "0.16"
ahash = "0.8"

smallvec = "1.13"

nohash-hasher = "0.2"

serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
codegen = "0.2.0"

[build-dependencies]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3