[package]
name = "PawLang"
version = "0.0.2"
edition = "2024"

[dependencies]
ariadne = "0.5.1"
anyhow = "1"
# 解析
pest = "2.8.2"
pest_derive = "2.8.2"

# Cranelift 后端
cranelift-codegen  = "0.124.1"
cranelift-module   = "0.124.1"
cranelift-object   = "0.124.1"
cranelift-frontend = "0.124.1"
cranelift-native = { version = "0.124.1", default-features = true }
target-lexicon = "0.13"


hashbrown = "0.16"
ahash = "0.8"

smallvec = "1.15.1"

nohash-hasher = "0.2"

serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.7"

[build-dependencies]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3